required links to css and js added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Task 5</title>
+    <link rel="stylesheet" href="assets/css/task5.css" />
 </head>
 
 <body>
@@ -14,6 +15,7 @@
             <p>Description:<span class="desc-data"></span></p>
         </div>
     </div>
+    <script src="assets/js/task5.js"></script>
 </body>
 
 </html>
