html updated for corresponding js code

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div class="container">
-        <div class="main-block">
-            <p>Title:<span class="title-data"></span></p>
-            <p>Description:<span class="desc-data"></span></p>
+        <div id="main-block">
+        </div>
+        <div class="btn">
+            <button onclick="filldata()" id="btn-1">Load more</button>
         </div>
     </div>
     <script src="assets/js/task5.js"></script>
